hphp/test/slow/reified-generics/nullable_type_hint.php.expectf
NULL
int(1)
NULL
object(C) (0) {
}

Catchable fatal error: Value returned from function f() must be of type C, D given in %s on line 14
